--- a/cd.html
+++ b/cd.html
@@ -80,7 +80,7 @@
 #main_img {
   width: 100%;
   height: 410px;
-  background-image: url("img/portmain.png");
+  background-image: url("portmain.png");
   background-color: #b6b9fe;
   background-repeat: no-repeat;
   background-position: top center;
@@ -219,9 +219,9 @@ table, th, tr, td {
 
 
     <div class="header">
-  <a href="index_21961082.html" class="logo"><img src="img/logo.png"></a>
+  <a href="index.html" class="logo"><img src="logo.png"></a>
   <div class="header-right">
-    <a href="index_21961082.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
+    <a href="index.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
     <a  href="profile.html">&nbsp;&nbsp;&nbsp;Introduction&nbsp;&nbsp;&nbsp;</a>
     <a class="active" href="portfolio.html">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</a>
     <a href="contact.html">&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;</a>
@@ -256,22 +256,22 @@ table, th, tr, td {
      <table>
     <tr>
 
-        <th colspan="3" id="dt">[카드뉴스] SABON &nbsp;<img src="img/best.png"></th>
+        <th colspan="3" id="dt">[카드뉴스] SABON &nbsp;<img src="best.png"></th>
 
     </tr>
   </table>
   <table>
     <tr>
-      <td><img src="img/card1.jpg" id="imgdeco" width="250px"></td>
-      <td><img src="img/card2.gif" id="imgdeco" width="250px"></td>
-      <td><img src="img/card3.jpg" id="imgdeco" width="250px"></td>
-      <td><img src="img/card4.jpg" id="imgdeco" width="250px"></td>
+      <td><img src="card1.jpg" id="imgdeco" width="250px"></td>
+      <td><img src="card2.gif" id="imgdeco" width="250px"></td>
+      <td><img src="card3.jpg" id="imgdeco" width="250px"></td>
+      <td><img src="card4.jpg" id="imgdeco" width="250px"></td>
     </tr>
     <tr>
-      <td><img src="img/card5.gif" id="imgdeco" width="250px"></td>
-      <td><img src="img/card6.gif" id="imgdeco" width="250px"></td>
-      <td><img src="img/card7.jpg" id="imgdeco" width="250px"></td>
-      <td><img src="img/card8.jpg" id="imgdeco" width="250px"></td>
+      <td><img src="card5.gif" id="imgdeco" width="250px"></td>
+      <td><img src="card6.gif" id="imgdeco" width="250px"></td>
+      <td><img src="card7.jpg" id="imgdeco" width="250px"></td>
+      <td><img src="card8.jpg" id="imgdeco" width="250px"></td>
     </tr>
   </table>
       <table>
@@ -285,15 +285,15 @@ table, th, tr, td {
     </tr>
     <tr>
         <th>디자인기획</th>
-        <td colspan="2"><a href="https://drive.google.com/open?id=1wyAIR0GUZFUYVAmtf3XJ8C6un3BQhTuO"><img src="img/plandown.png"></a></td>
+        <td colspan="2"><a href="https://drive.google.com/open?id=1wyAIR0GUZFUYVAmtf3XJ8C6un3BQhTuO"><img src="plandown.png"></a></td>
     </tr>
     <tr>
 
           <th>활동</th>
 
-        <td colspan=2><a href="like.html"><img src="img/like.png"></a>&nbsp;
-                      <a href="scrap.html"><img src="img/scrap.png"></a>&nbsp;
-                      <a href="contact.html"><img src="img/call.png"></a>&nbsp;</td>
+        <td colspan=2><a href="like.html"><img src="like.png"></a>&nbsp;
+                      <a href="scrap.html"><img src="scrap.png"></a>&nbsp;
+                      <a href="contact.html"><img src="call.png"></a>&nbsp;</td>
 
     </tr>
 </table>
@@ -302,22 +302,22 @@ table, th, tr, td {
 <table>
 <tr>
 
-   <th colspan="3" id="dt">[앱 페이지] 에버랜드 할로윈 이벤트 &nbsp;<img src="img/best.png"></th>
+   <th colspan="3" id="dt">[앱 페이지] 에버랜드 할로윈 이벤트 &nbsp;<img src="best.png"></th>
 
 </tr>
 </table>
 <table>
 <tr>
- <td><img src="img/app1.gif" id="imgdeco" width="250px"></td>
- <td><img src="img/app2.png" id="imgdeco" width="250px"></td>
- <td><img src="img/app3.png" id="imgdeco" width="250px"></td>
- <td><img src="img/app4.png" id="imgdeco" width="250px"></td>
+ <td><img src="app1.gif" id="imgdeco" width="250px"></td>
+ <td><img src="app2.png" id="imgdeco" width="250px"></td>
+ <td><img src="app3.png" id="imgdeco" width="250px"></td>
+ <td><img src="app4.png" id="imgdeco" width="250px"></td>
 </tr>
 <tr>
- <td><img src="img/app5.gif" id="imgdeco" width="250px"></td>
- <td><img src="img/app6.gif" id="imgdeco" width="250px"></td>
- <td><img src="img/app7.jpg" id="imgdeco" width="250px"></td>
- <td><img src="img/app8.png" id="imgdeco" width="250px"></td>
+ <td><img src="app5.gif" id="imgdeco" width="250px"></td>
+ <td><img src="app6.gif" id="imgdeco" width="250px"></td>
+ <td><img src="app7.jpg" id="imgdeco" width="250px"></td>
+ <td><img src="app8.png" id="imgdeco" width="250px"></td>
 </tr>
 </table>
  <table>
@@ -331,15 +331,15 @@ table, th, tr, td {
 </tr>
 <tr>
    <th>풀영상</th>
-   <td colspan="2"><a href="https://drive.google.com/open?id=18aaVDavWj40BzMIMWw6QwUPjE5whDRHM"><img src="img/videoplay.png"></a></td>
+   <td colspan="2"><a href="https://drive.google.com/open?id=18aaVDavWj40BzMIMWw6QwUPjE5whDRHM"><img src="videoplay.png"></a></td>
 </tr>
 <tr>
 
      <th>활동</th>
 
-   <td colspan=2><a href="like.html"><img src="img/like.png"></a>&nbsp;
-                 <a href="scrap.html"><img src="img/scrap.png"></a>&nbsp;
-                 <a href="contact.html"><img src="img/call.png"></a>&nbsp;</td>
+   <td colspan=2><a href="like.html"><img src="like.png"></a>&nbsp;
+                 <a href="scrap.html"><img src="scrap.png"></a>&nbsp;
+                 <a href="contact.html"><img src="call.png"></a>&nbsp;</td>
 
 </tr>
 </table>
@@ -351,7 +351,7 @@ table, th, tr, td {
    <footer class="c12">
      <div id='footer_box'>
        <div id='footer_logo'>
-         <img src='img/logo.png'>
+         <img src='logo.png'>
        </div>
        <ul id='address'>
        <li>서울시 강남구 영동대로 210</li>
