--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 #main_img {
   width: 100%;
   height: 410px;
-  background-image: url("img/contactmain.png");
+  background-image: url("contactmain.png");
   background-color: #b6b9fe;
   background-repeat: no-repeat;
   background-position: top center;
@@ -191,9 +191,9 @@ table, th, tr, td {
 
 
     <div class="header">
-  <a href="index_21961082.html" class="logo"><img src="img/logo.png"></a>
+  <a href="index.html" class="logo"><img src="logo.png"></a>
   <div class="header-right">
-    <a href="index_21961082.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
+    <a href="index.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
     <a  href="profile.html">&nbsp;&nbsp;&nbsp;Introduction&nbsp;&nbsp;&nbsp;</a>
     <a href="planning.html">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</a>
     <a class="active" href="contact.html">&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;</a>
@@ -254,7 +254,7 @@ table, th, tr, td {
          <td>내용</td><td><textarea rows="5" cols="50"></textarea></td>
        </tr>
        <tr>
-         <td rowspan="2"><a href="contactdone.html"><img src="img/contactbutton.png"></a></td>
+         <td rowspan="2"><a href="contactdone.html"><img src="contactbutton.png"></a></td>
        </tr>
      </table>
    </form>
@@ -266,7 +266,7 @@ table, th, tr, td {
    <footer class="c12">
      <div id='footer_box'>
        <div id='footer_logo'>
-         <img src='img/logo.png'>
+         <img src='logo.png'>
        </div>
        <ul id='address'>
        <li>서울시 강남구 영동대로 210</li>
