--- a/like.html
+++ b/like.html
@@ -80,7 +80,7 @@
 #main_img {
   width: 100%;
   height: 410px;
-  background-image: url("img/contactmain.png");
+  background-image: url("contactmain.png");
   background-color: #b6b9fe;
   background-repeat: no-repeat;
   background-position: top center;
@@ -191,9 +191,9 @@ table, th, tr, td {
 
 
     <div class="header">
-  <a href="index_21961082.html" class="logo"><img src="img/logo.png"></a>
+  <a href="index.html" class="logo"><img src="logo.png"></a>
   <div class="header-right">
-    <a href="index_21961082.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
+    <a href="index.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
     <a  href="profile.html">&nbsp;&nbsp;&nbsp;Introduction&nbsp;&nbsp;&nbsp;</a>
     <a href="planning.html">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</a>
     <a class="active" href="contact.html">&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;</a>
@@ -223,16 +223,16 @@ table, th, tr, td {
        <th>순번</th><th>사진</th><th>작업명</th><th>날짜</th>
      </tr>
      <tr>
-       <td>1</td><td><a href="plannig.html"><img src="img/fine.png" id="imgdeco" width="300px"></td><td>FINE</td><td>2020.04.02</td>
+       <td>1</td><td><a href="plannig.html"><img src="fine.png" id="imgdeco" width="300px"></td><td>FINE</td><td>2020.04.02</td>
      </tr>
      <tr>
-       <td>2</td><td><a href="renewal.html"><img src="img/lotte.jpg" id="imgdeco" width="300px"></td><td>롯데프레시</td><td>2020.04.08</td>
+       <td>2</td><td><a href="renewal.html"><img src="lotte.jpg" id="imgdeco" width="300px"></td><td>롯데프레시</td><td>2020.04.08</td>
      </tr>
      <tr>
-       <td>3</td><td><a href="cd.html"><img src="img/card1.jpg" id="imgdeco" width="300px"></td><td>SABON</td><td>2020.04.18</td>
+       <td>3</td><td><a href="cd.html"><img src="card1.jpg" id="imgdeco" width="300px"></td><td>SABON</td><td>2020.04.18</td>
      </tr>
      <tr>
-       <td>4</td><td><a href="coding.html"><img src="img/wing.jpg" id="imgdeco" width="300px"></td><td>그린나래</td><td>2020.04.29</td>
+       <td>4</td><td><a href="coding.html"><img src="wing.jpg" id="imgdeco" width="300px"></td><td>그린나래</td><td>2020.04.29</td>
      </tr>
 
     </table>
@@ -244,7 +244,7 @@ table, th, tr, td {
    <footer class="c12">
      <div id='footer_box'>
        <div id='footer_logo'>
-         <img src='img/logo.png'>
+         <img src='logo.png'>
        </div>
        <ul id='address'>
        <li>서울시 강남구 영동대로 210</li>
