--- a/planning.html
+++ b/planning.html
@@ -80,7 +80,7 @@
 #main_img {
   width: 100%;
   height: 410px;
-  background-image: url("img/portmain.png");
+  background-image: url("portmain.png");
   background-color: #b6b9fe;
   background-repeat: no-repeat;
   background-position: top center;
@@ -219,9 +219,9 @@ table, th, tr, td {
 
 
     <div class="header">
-  <a href="index_21961082.html" class="logo"><img src="img/logo.png"></a>
+  <a href="index.html" class="logo"><img src="logo.png"></a>
   <div class="header-right">
-    <a href="index_21961082.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
+    <a href="index.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
     <a  href="profile.html">&nbsp;&nbsp;&nbsp;Introduction&nbsp;&nbsp;&nbsp;</a>
     <a class="active" href="portfolio.html">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</a>
     <a href="contact.html">&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;</a>
@@ -255,7 +255,7 @@ table, th, tr, td {
 
      <table>
     <tr>
-        <th rowspan="5"><img src="img/mohay.png" id="imgdeco" width="400px"></th>
+        <th rowspan="5"><img src="mohay.png" id="imgdeco" width="400px"></th>
         <th rowspan="5"></th>
         <th colspan="3" id="dt">[IoT] 모해</th>
 
@@ -271,15 +271,15 @@ table, th, tr, td {
     </tr>
     <tr>
         <th>다운받기</th>
-        <td colspan="2"><a href="https://drive.google.com/open?id=1Hzm072swsrFeydfIsgI2QGQJFQK-Pc2Q"><img src="img/plandown.png"></a></td>
+        <td colspan="2"><a href="https://drive.google.com/open?id=1Hzm072swsrFeydfIsgI2QGQJFQK-Pc2Q"><img src="plandown.png"></a></td>
     </tr>
     <tr>
 
           <th>활동</th>
 
-        <td colspan=2><a href="like.html"><img src="img/like.png"></a>&nbsp;
-                      <a href="scrap.html"><img src="img/scrap.png"></a>&nbsp;
-                      <a href="contact.html"><img src="img/call.png"></a>&nbsp;</td>
+        <td colspan=2><a href="like.html"><img src="like.png"></a>&nbsp;
+                      <a href="scrap.html"><img src="scrap.png"></a>&nbsp;
+                      <a href="contact.html"><img src="call.png"></a>&nbsp;</td>
 
     </tr>
 </table>
@@ -287,7 +287,7 @@ table, th, tr, td {
 <br><br><br>
 <table>
 <tr>
-   <th rowspan="5"><img src="img/fine.png" id="imgdeco" width="400px"></th>
+   <th rowspan="5"><img src="fine.png" id="imgdeco" width="400px"></th>
    <th rowspan="5"></th>
    <th colspan="3" id="dt">[모바일 어플리케이션] FINE</th>
 
@@ -303,15 +303,15 @@ table, th, tr, td {
 </tr>
 <tr>
    <th>다운받기</th>
-   <td colspan="2"><a href="https://drive.google.com/open?id=1VU_atq6rilyuA-KI9u72SEHrnYMcsY7W"><img src="img/plandown.png"></a></td>
+   <td colspan="2"><a href="https://drive.google.com/open?id=1VU_atq6rilyuA-KI9u72SEHrnYMcsY7W"><img src="plandown.png"></a></td>
 </tr>
 <tr>
 
      <th>활동</th>
 
-   <td colspan=2><a href="like.html"><img src="img/like.png"></a>&nbsp;
-                 <a href="scrap.html"><img src="img/scrap.png"></a>&nbsp;
-                 <a href="contact.html"><img src="img/call.png"></a>&nbsp;</td>
+   <td colspan=2><a href="like.html"><img src="like.png"></a>&nbsp;
+                 <a href="scrap.html"><img src="scrap.png"></a>&nbsp;
+                 <a href="contact.html"><img src="call.png"></a>&nbsp;</td>
 
 </tr>
 </table>
@@ -319,7 +319,7 @@ table, th, tr, td {
 <br><br><br>
 <table>
 <tr>
-   <th rowspan="5"><img src="img/funch.jpg" id="imgdeco" width="400px"></th>
+   <th rowspan="5"><img src="funch.jpg" id="imgdeco" width="400px"></th>
    <th rowspan="5"></th>
    <th colspan="3" id="dt">[모바일 어플리케이션] FUN:CH</th>
 
@@ -335,15 +335,15 @@ table, th, tr, td {
 </tr>
 <tr>
    <th>다운받기</th>
-   <td colspan="2"><a href="https://drive.google.com/open?id=1WR60iwdqEvJcADNDliOOxeRjMuexySPW"><img src="img/plandown.png"></a></td>
+   <td colspan="2"><a href="https://drive.google.com/open?id=1WR60iwdqEvJcADNDliOOxeRjMuexySPW"><img src="plandown.png"></a></td>
 </tr>
 <tr>
 
      <th>활동</th>
 
-   <td colspan=2><a href="like.html"><img src="img/like.png"></a>&nbsp;
-                 <a href="scrap.html"><img src="img/scrap.png"></a>&nbsp;
-                 <a href="contact.html"><img src="img/call.png"></a>&nbsp;</td>
+   <td colspan=2><a href="like.html"><img src="like.png"></a>&nbsp;
+                 <a href="scrap.html"><img src="scrap.png"></a>&nbsp;
+                 <a href="contact.html"><img src="call.png"></a>&nbsp;</td>
 
 </tr>
 </table>
@@ -354,7 +354,7 @@ table, th, tr, td {
    <footer class="c12">
      <div id='footer_box'>
        <div id='footer_logo'>
-         <img src='img/logo.png'>
+         <img src='logo.png'>
        </div>
        <ul id='address'>
        <li>서울시 강남구 영동대로 210</li>
