--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,7 @@
 #main_img {
   width: 100%;
   height: 410px;
-  background-image: url("img/self2.png");
+  background-image: url("self2.png");
   background-color: #b6b9fe;
   background-repeat: no-repeat;
   background-position: top center;
@@ -187,9 +187,9 @@ table, th, tr, td {
 
 
     <div class="header">
-  <a href="index_21961082.html" class="logo"><img src="img/logo.png"></a>
+  <a href="index.html" class="logo"><img src="logo.png"></a>
   <div class="header-right">
-    <a href="index_21961082.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
+    <a href="index.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
     <a class="active" href="profile.html">&nbsp;&nbsp;&nbsp;Introduction&nbsp;&nbsp;&nbsp;</a>
     <a href="planning.html">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</a>
     <a href="contact.html">&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;</a>
@@ -215,7 +215,7 @@ table, th, tr, td {
 
      <table>
     <tr>
-        <th rowspan="5"><img src="img/ys1.png"></th>
+        <th rowspan="5"><img src="ys1.png"></th>
         <th rowspan="5"></th>
         <th>생년월일</th>
         <td>2000년 08월 16일</td>
@@ -244,7 +244,7 @@ table, th, tr, td {
    <footer class="c12">
      <div id='footer_box'>
        <div id='footer_logo'>
-         <img src='img/logo.png'>
+         <img src='logo.png'>
        </div>
        <ul id='address'>
        <li>서울시 강남구 영동대로 210</li>
