--- a/programming.html
+++ b/programming.html
@@ -80,7 +80,7 @@
 #main_img {
   width: 100%;
   height: 410px;
-  background-image: url("img/portmain.png");
+  background-image: url("portmain.png");
   background-color: #b6b9fe;
   background-repeat: no-repeat;
   background-position: top center;
@@ -219,9 +219,9 @@ table, th, tr, td {
 
 
     <div class="header">
-  <a href="index_21961082.html" class="logo"><img src="img/logo.png"></a>
+  <a href="index.html" class="logo"><img src="logo.png"></a>
   <div class="header-right">
-    <a href="index_21961082.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
+    <a href="index.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
     <a  href="profile.html">&nbsp;&nbsp;&nbsp;Introduction&nbsp;&nbsp;&nbsp;</a>
     <a class="active" href="portfolio.html">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</a>
     <a href="contact.html">&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;</a>
@@ -255,9 +255,9 @@ table, th, tr, td {
 
      <table>
     <tr>
-        <th rowspan="5"><img src="img/unity.gif" id="imgdeco" width="400px"></th>
+        <th rowspan="5"><img src="unity.gif" id="imgdeco" width="400px"></th>
         <th rowspan="5"></th>
-        <th colspan="3" id="dt">[유니티] YOUNG CITY &nbsp;<img src="img/best.png"</th>
+        <th colspan="3" id="dt">[유니티] YOUNG CITY &nbsp;<img src="best.png"</th>
 
     </tr>
     <tr>
@@ -271,15 +271,15 @@ table, th, tr, td {
     </tr>
     <tr>
         <th>풀버전</th>
-        <td colspan="2"><a href="https://youtu.be/snlqseUVQ0E"><img src="img/videoplay.png"></a></td>
+        <td colspan="2"><a href="https://youtu.be/snlqseUVQ0E"><img src="videoplay.png"></a></td>
     </tr>
     <tr>
 
           <th>활동</th>
 
-        <td colspan=2><a href="like.html"><img src="img/like.png"></a>&nbsp;
-                      <a href="scrap.html"><img src="img/scrap.png"></a>&nbsp;
-                      <a href="contact.html"><img src="img/call.png"></a>&nbsp;</td>
+        <td colspan=2><a href="like.html"><img src="like.png"></a>&nbsp;
+                      <a href="scrap.html"><img src="scrap.png"></a>&nbsp;
+                      <a href="contact.html"><img src="call.png"></a>&nbsp;</td>
 
     </tr>
 </table>
@@ -290,7 +290,7 @@ table, th, tr, td {
    <footer class="c12">
      <div id='footer_box'>
        <div id='footer_logo'>
-         <img src='img/logo.png'>
+         <img src='logo.png'>
        </div>
        <ul id='address'>
        <li>서울시 강남구 영동대로 210</li>
