--- a/scrap.html
+++ b/scrap.html
@@ -191,9 +191,9 @@ table, th, tr, td {
 
 
     <div class="header">
-  <a href="index_21961082.html" class="logo"><img src="img/logo.png"></a>
+  <a href="index.html" class="logo"><img src="logo.png"></a>
   <div class="header-right">
-    <a href="index_21961082.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
+    <a href="index.html">&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;</a>
     <a  href="profile.html">&nbsp;&nbsp;&nbsp;Introduction&nbsp;&nbsp;&nbsp;</a>
     <a href="planning.html">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</a>
     <a class="active" href="contact.html">&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;</a>
@@ -223,13 +223,13 @@ table, th, tr, td {
        <th>순번</th><th>사진</th><th>작업명</th><th>날짜</th>
      </tr>
      <tr>
-       <td>1</td><td><a href="plannig.html"><img src="img/funch.jpg" id="imgdeco" width="300px"></td><td>FUN:CH</td><td>2020.04.11</td>
+       <td>1</td><td><a href="plannig.html"><img src="funch.jpg" id="imgdeco" width="300px"></td><td>FUN:CH</td><td>2020.04.11</td>
      </tr>
      <tr>
-       <td>2</td><td><a href="design.html"><img src="img/up.gif" id="imgdeco" width="300px"></td><td>UP 오프닝 시퀀스</td><td>2020.04.16</td>
+       <td>2</td><td><a href="design.html"><img src="up.gif" id="imgdeco" width="300px"></td><td>UP 오프닝 시퀀스</td><td>2020.04.16</td>
      </tr>
      <tr>
-       <td>3</td><td><a href="programming.html"><img src="img/unity.gif" id="imgdeco" width="300px"></td><td>YOUNG CITY</td><td>2020.04.24</td>
+       <td>3</td><td><a href="programming.html"><img src="unity.gif" id="imgdeco" width="300px"></td><td>YOUNG CITY</td><td>2020.04.24</td>
      </tr>
 
     </table>
@@ -241,7 +241,7 @@ table, th, tr, td {
    <footer class="c12">
      <div id='footer_box'>
        <div id='footer_logo'>
-         <img src='img/logo.png'>
+         <img src='logo.png'>
        </div>
        <ul id='address'>
        <li>서울시 강남구 영동대로 210</li>
