--- a/contactdone.html
+++ b/contactdone.html
@@ -216,7 +216,7 @@ table, th, tr, td {
    <section id="main" class="c9">
      <br><h3>의뢰 내용이 전송되었습니다.</h3>
      <br>
-     <a href="index_21961082.html"><img src="contactback.png"></a>
+     <a href="index.html"><img src="contactback.png"></a>
 
    </section>
 
