--- a/scrap.html
+++ b/scrap.html
@@ -80,7 +80,7 @@
 #main_img {
   width: 100%;
   height: 410px;
-  background-image: url("img/contactmain.png");
+  background-image: url("contactmain.png");
   background-color: #b6b9fe;
   background-repeat: no-repeat;
   background-position: top center;
