--- a/coding.html
+++ b/coding.html
@@ -15,7 +15,7 @@
       }
 
       * {
-        background-color: #fffff;
+        background-color: #ffffff;
         box-sizing:border-box;
         margin:0;
         padding:0;
