--- a/coding.html
+++ b/coding.html
@@ -7,7 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Noto+Serif+KR&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
-      .ft01 {
+      body {
+        background-color: ffffff;
+        }
+        .ft01 {
         font-family: 'Nanum Gothic', sans-serif;
       }
       .ft02 {
