--- a/planning.html
+++ b/planning.html
@@ -20,6 +20,9 @@
         margin:0;
         padding:0;
       }
+      body {
+        background-color: #ffffff;
+        }
 
       .c1 {width:8.33%; float:left; padding:15px;}
       .c2 {width:16.66%; float:left; padding:15px;}
